examples/test/testpolicy16124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16124
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key27: value19
      key8: value36
      key3: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value16
      podSelector:
        matchLabels:
          key28: value8
          key44: value28
          key47: value35
